*** 20001124_1 by lusky
fixed IPQuadTab corruption issue [werd!@#@!#!@] (db/pvr)
added hide_ops (db)


*** 20001122_1 by lusky
fixed the m_userhost fix


*** 20001121_1 by lusky
revved patchlevel to rc7
redundant if in server_estab() (gp)
ported SERVERHIDE from +ins patch (ejb/jrl)
disabled hunting by nick or wildcard for local nonopers with SERVERHIDE


*** 20001118_1 by lusky
changed a bunch of debugging sendto_ops to sendto_realops
first fix for bogus hostnames from other ircds


*** 20001110_1 by lusky
updated rehash help message
parser fix
make ADMIN non-hunting for unregistered connections


*** 20001108_2 by lusky
don't allow VERSION from unregistered clients


*** 20001108_1 by lusky
removed bogus C++ comment (cab)
added CIDR documentation
fixed a cast in s_zip.c (cab)


*** 20001101_1 by lusky
disallow DNS command from non-opers
format string snafu in ts_warn()
format string snafu in debug()


*** 20001029_2 by lusky
revved patchlevel for rc6
added O_LINES_OPER_ONLY


*** 20001029_1 by lusky
fix for mIRC NAT+spoofedI DCC send problem (userhost now returns sockhost
for acptr==sptr).


*** 20001025_1 by lusky
fix path in viconf (ab)


*** 20001024_1 by lusky
fixed new x_LINES_OPER_ONLY defines (jdc)


*** 20001023_1 by lusky
sync'd key charset per discussion with comstud


*** 20001021_1 by lusky
fix for duplicate 401's for kick #validchan invalnick
ServerStats->is_ref is incremented twice on an X-line
  which is set to 1 (jdc)
STATS P notifications were not sent to opers (jdc)
includefile rehash notifications sent to FLAGS_DEBUG
stats l/L target to FLAGS_SPY (if STATS_NOTICE) (jdc)
uname info only displayed to opers
If X-line port field is 2, reject client but do not send
  a notification to opers
STATS y/Y now oper-only
Four new defines, I_LINES_OPER_ONLY, K_LINES_OPER_ONLY,
  P_LINES_OPER_ONLY, and SPOOF_NOTICE (jdc/jrl)
add some missing defines to m_info.h


*** 20001019_1 by lusky